# kratos-hacking-ai

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  run.sh
docker/: Dockerfile.kali  docker-compose.yml
docs/: ARCHITECTURE.md  QUICKSTART.md  TRAINING.md
kratos-model/data/: schema.py
kratos-model/notebooks/: train_colab.ipynb
kratos-model/scripts/: export_gguf.py  generate_synthetic.py  prepare_dataset.py  train.py
model/: Modelfile
src/kratos/: __init__.py  cli.py  config.py
src/kratos/adapters/in_/: cli_adapter.py
src/kratos/application/: planner.py  react_agent.py  session.py
src/kratos/domain/: __init__.py  entities.py  ports.py
src/kratos/prompts/: red_team.md
src/kratos/tools/: __init__.py  exploit.py  general.py  guardrails.py  privesc.py  recon.py  web.py
src/kratos/tui/: app.py
